# contoso-retail-analytics

./: .gitignore  README.md  pyproject.toml  requirements.txt
airflow/: docker-compose.yaml
airflow/config/: airflow.cfg
airflow/dags/: contoso_dbt_dag.py
airflow/sql/: bronze_ingest.sql
contoso_retail/: dbt_project.yml  example_profiles.yml
contoso_retail/analyses/: adhoc_queries.sql
contoso_retail/macros/: customer_segment.sql  discount_percentage.sql  profit_margin.sql
contoso_retail/models/bronze/: schema.yml
contoso_retail/models/gold/: properties.yml
contoso_retail/models/gold/analytics/: obt_sales.sql
contoso_retail/models/gold/dimensions/: dim_customer.sql  dim_date.sql  dim_product.sql  dim_store.sql
contoso_retail/models/gold/facts/: fact_sales.sql
contoso_retail/models/silver/staging/: properties.yml  stg_currencyexchange.sql  stg_customer.sql  stg_date.sql  stg_orderrows.sql  stg_orders.sql  stg_product.sql  stg_store.sql
contoso_retail/seeds/: seed_calendar.csv  seed_currency_lookup.csv
contoso_retail/snapshots/: snap_customers.sql  snap_products.sql  snap_stores.sql
contoso_retail/tests/: assert_delivery_after_order.sql  assert_exchange_rate_positive.sql  assert_positive_quantity.sql  assert_positive_revenue.sql  assert_profit_margin_range.sql
docs/: airflow-setup-guide.md  data_dictionary.md  snowflake-setup-guide.md
