[project]
name = "contoso-retail-analytics-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "airflow-operators>=0.11.0",
    "apache-airflow>=3.1.8",
    "boto3>=1.42.65",
    "dbt-core>=1.11.7",
    "dbt-snowflake>=1.11.3",
    "python-dotenv>=1.2.2",
]
